/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.12/userguide/building_java_projects.html in the Gradle documentation.
 */
import java.io.ByteArrayOutputStream

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    application
    kotlin("jvm") version "2.1.10"
    // id("org.openjfx.javafxplugin") version "0.1.0"
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
    maven(url = "https://jitpack.io")
    maven(url = "https://maven.lavalink.dev/releases")
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation(libs.junit.jupiter)

    testRuntimeOnly("org.junit.platform:junit-platform-launcher")

    // This dependency is used by the application.
    implementation(libs.guava)

    implementation(kotlin("stdlib"))

    // Jakarta
    implementation("jakarta.annotation:jakarta.annotation-api:3.0.0")
    implementation("jakarta.json:jakarta.json-api:2.1.3")

    // JSON
    implementation("org.eclipse.parsson:parsson:1.1.7")

    // JDA
    implementation("net.dv8tion:JDA:5.5.1")

    // Audio
    implementation("dev.arbjerg:lavaplayer:2.2.3")
    implementation("dev.lavalink.youtube:common:1.13.2")

    // SLF4J
    implementation("org.slf4j:slf4j-api:2.0.17")
    implementation("org.slf4j:slf4j-simple:2.0.17")

    // Testing
    implementation("org.mockito:mockito-core:5.17.0")
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
    modularity.inferModulePath = true 
}

// javafx {
//     version = "22"
//     modules = listOf(
//         "javafx.base",
//         "javafx.controls",
//         "javafx.fxml",
//         "javafx.media",
//         "javafx.web"
//     )
// }

application {
    // Define the main class for the application.
    // mainModule = "bot.ninetail"
    mainClass = "bot.ninetail.core.Ninetail"
}

tasks.withType<JavaCompile> {
    options.compilerArgs.addAll(listOf(
        "--enable-preview", "--add-reads", "bot.ninetail=ALL-UNNAMED"
    ))
}

tasks.named<Test>("test") {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}

tasks.withType<JavaExec> {
    jvmArgs = listOf("--enable-preview", "--add-reads", "bot.ninetail=ALL-UNNAMED")
}
